--- a/src/app/modules/home-actors/home-actors-modal/home-actors-modal.component.css
+++ b/src/app/modules/home-actors/home-actors-modal/home-actors-modal.component.css
@@ -1,6 +1,6 @@
 .page-layout {
     width: 100%;
-   /* height: 100vh;*/
+    /* height: 100vh;*/
 }
 
 .content {
@@ -28,7 +28,7 @@ form {
 .header-left {
     float: left;
     font-family: sans-serif;
-    font-size: 1.8em;
+    font-size: 1.1em;
 }
 
 .header-divider {
@@ -47,9 +47,73 @@ form {
     width: 100px;
     font-size: medium;
 }
-::ng-deep .mat-dialog-container{
+
+::ng-deep .mat-dialog-container {
     padding: 10px 21px;
 }
+
 mat-card {
     box-shadow: none !important;
+}
+
+.edit-header {
+    display: block;
+}
+
+.edit-textarea-bloc {
+    display: block;
+    height: 102px;
+    padding: 10px 0;
+}
+
+.edit-img {
+    width: 100%;
+    margin: 10px 0;
+}
+
+.rounded {
+    border-radius: 1.25rem!important;
+}
+
+.edit-post-icon {
+    height: 33px;
+    width: 33px;
+    float: left;
+    margin: 10px 10px 0 0;
+}
+
+.postbox-textarea {
+    overflow-y: scroll;
+    color: #5c6178;
+    width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    height: 100%;
+    min-height: 30px;
+    outline: none;
+    box-sizing: border-box;
+    display: block;
+    max-width: 100%;
+    line-height: 1.5;
+    border-radius: 3px;
+    font: 13px Tahoma, cursive;
+    transition: box-shadow 0.5s ease;
+    resize: none;
+    overflow: hidden;
+}
+
+.edit-post-footer {
+    margin: 10px 0 0 0;
+}
+
+.btn-edit-save {
+    background-color: #007bff;
+    color: white;
+    width: 100px;
+    margin-right: 10px;
+    font-size: large;
+    float: right;
 }
