--- a/src/app/modules/user/user-modal/user-modal.component.html
+++ b/src/app/modules/user/user-modal/user-modal.component.html
@@ -96,7 +96,7 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" class="form-footer">
+    <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" class="form-footerr">
       <button mat-raised-button [disabled]="!administrationForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
