--- a/src/app/modules/educational-institution/educational-institution.component.css
+++ b/src/app/modules/educational-institution/educational-institution.component.css
@@ -28,6 +28,12 @@
     margin: 11px 0;
 }
 
+.rounded {
+    border-radius: 1.25rem!important;
+    width: 33px;
+    height: 33px;
+}
+
 .btn-create-text {
     margin-left: 10p;
 }
