--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -46,16 +46,11 @@
                     </td>
                 </ng-container>
 
-                <!-- ID Column -->
-                <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                    <td mat-cell *matCellDef="let row">#{{row.id}} </td>
-                </ng-container>
-
                 <!-- Progress Column -->
                 <ng-container matColumnDef="photos">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
-                    <td mat-cell *matCellDef="let row"> <img src={{row.photos}} /> </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+                    <td mat-cell *matCellDef="let row"> <img mat-card-avatar class=" rounded" src={{row.photos}} />
+                    </td>
                 </ng-container>
 
                 <!-- Name Column -->
