--- a/src/app/modules/field/field/field.component.html
+++ b/src/app/modules/field/field/field.component.html
@@ -33,12 +33,6 @@
           </td>
         </ng-container>
 
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-        </ng-container>
-
         <!-- Name Column -->
         <ng-container matColumnDef="fieldName">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -54,7 +48,7 @@
         <!-- Level Column -->
         <ng-container matColumnDef="level">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Level </th>
-          <td mat-cell *matCellDef="let row"> {{row.level.levelName}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.level.levelName}} - {{row.level.establishment.establishmentName}}</td>
         </ng-container>
 
         <!-- Star Column -->
