--- a/src/app/modules/user/user-modal/user-modal.component.css
+++ b/src/app/modules/user/user-modal/user-modal.component.css
@@ -91,7 +91,7 @@ mat-tab-group {
 
 .form-footer {
     height: 40px;
-    background-color: lightgray;
+   /* background-color: lightgray;*/
     border-radius: 10px;
     padding: 0 20px;
     margin: 10px 0;
