--- a/src/app/modules/user/user/user.component.css
+++ b/src/app/modules/user/user/user.component.css
@@ -177,5 +177,6 @@ label:active:after {
 .user-img {
     width: 33px;
     height: 33px;
-    margin: 0 20px 0 0
+    margin: 0 20px 0 0;
+    border-radius: 1.25em;
 }
