--- a/src/app/modules/group/group/group.component.html
+++ b/src/app/modules/group/group/group.component.html
@@ -1,6 +1,7 @@
 <div [ngSwitch]="actionForm">
 
   <ng-template [ngSwitchCase]="'SuperAdminOrAdministrationUI'">
+    <app-group-list></app-group-list>
   </ng-template>
 
 
