--- a/src/app/shared/side-nav/side-nav.component.html
+++ b/src/app/shared/side-nav/side-nav.component.html
@@ -38,6 +38,8 @@
                 <mat-icon>class</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Class</span></a>
             <a mat-list-item href="#" routerLink="/course">
                 <mat-icon>cast_for_education </mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Course</span></a>
+                <a mat-list-item href="#" routerLink="/group">
+                    <mat-icon>assignment_ind</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Groups</span></a>
             <a mat-list-item href="#" routerLink="/user">
                 <mat-icon>group</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Users</span></a>
             <a mat-list-item (click)="logout()">
@@ -58,7 +60,7 @@
                 <a mat-list-item href="#" routerLink="/course">
                     <mat-icon>cast_for_education </mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Course</span></a>
                 <a mat-list-item href="#" routerLink="/group">
-                        <mat-icon>group</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Groups</span></a>
+                        <mat-icon>assignment_ind</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Groups</span></a>
                 <a mat-list-item href="#" routerLink="/user">
                     <mat-icon>group</mat-icon>&nbsp;&nbsp;<span *ngIf="!isHandset">Manage Users</span></a>
                 <a mat-list-item (click)="logout()">
