--- a/src/app/modules/course/course/course.component.css
+++ b/src/app/modules/course/course/course.component.css
@@ -114,10 +114,9 @@ td.mat-column-more, th.mat-column-more {
 
 .empty-data-source {
     width: 526px;
-    height: 90px;
     font-size: 1.7em;
     text-align: center;
-    border: 2px solid #007bff;
+    border: 2px solid darkgray;
     margin: 0;
     position: absolute;
     top: 50%;
