--- a/src/app/modules/educational-institution/educational-institution.component.css
+++ b/src/app/modules/educational-institution/educational-institution.component.css
@@ -120,10 +120,9 @@ td.mat-column-more, th.mat-column-more {
 
 .empty-data-source {
     width: 526px;
-    height: 90px;
     font-size: 1.7em;
     text-align: center;
-    border: 2px solid #007bff;
+    border: 2px solid darkgray;
     margin: 0;
     position: absolute;
     top: 50%;
@@ -145,4 +144,11 @@ mat-grid-tile {
 
 .pointer {
     cursor: pointer;
+}
+
+.user-img {
+    width: 33px;
+    height: 33px;
+    margin: 0 20px 0 20px;
+    border-radius: 1.25em;
 }
