--- a/src/app/modules/group/group-list/group-list/group-list.component.css
+++ b/src/app/modules/group/group-list/group-list/group-list.component.css
@@ -47,10 +47,9 @@ table {
 
 .empty-data-source {
     width: 526px;
-    height: 90px;
     font-size: 1.7em;
     text-align: center;
-    border: 2px solid #007bff;
+    border: 2px solid darkgray;
     margin: 0;
     position: absolute;
     top: 50%;
