--- a/src/app/modules/group/group/group.component.css
+++ b/src/app/modules/group/group/group.component.css
@@ -228,3 +228,142 @@
     cursor: pointer;
     text-decoration: none;
 }
+
+
+
+
+
+
+
+.custom-container {
+    padding: 10px;
+}
+
+.header {
+    width: 100%;
+    padding: 10px;
+    height: 70px;
+}
+
+.header-left {
+    width: 50%;
+    float: left;
+    font-family: sans-serif;
+    font-size: 1.8em;
+    margin: 11px 0;
+}
+
+.header-divider {
+    margin: 0 10px;
+}
+
+.btn-create {
+    float: right;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    margin: 11px 0;
+}
+
+.btn-create-text {
+    margin-left: 10p;
+}
+
+.data-table {
+    margin: 10px 0;
+    padding: 10px;
+}
+
+table {
+    width: 100%;
+}
+
+.filter {
+    width: 93%;
+}
+
+/*td, th {
+    width: 15%;
+}*/
+
+td.mat-column-more, th.mat-column-more {
+    width: 20px;
+    padding-right: 8px;
+}
+
+.mat-form-field {
+    height: 60px;
+    width: 100%;
+    font-size: 14px;
+}
+
+::ng-deep .mat-form-field-infix {
+    display: inline-flex !important;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    height: 50px;
+}
+
+.filter-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: -7px 0;
+}
+
+.filter-header {
+    height: 50px;
+    padding: 5px 10px;
+}
+
+.tab-footer {
+    width: 100%;
+}
+
+.footer-left {
+    width: 50%;
+    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 56px;
+    padding: 0 24px;
+}
+
+.footer-select {
+    width: 233px;
+    margin: 0 11px;
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 7px;
+    padding: 3px 5px;
+    height: 32px;
+}
+
+.footer-checkbox {
+    vertical-align: middle;
+}
+
+.footer-btn {
+    height: 30px;
+    text-align: center;
+}
+
+.empty-data-source {
+    width: 526px;
+    font-size: 1.7em;
+    text-align: center;
+    border: 2px solid darkgray;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-family: sans-serif;
+    color: grey;
+    border-radius: 20px;
+}
+
+.pointer {
+    cursor: pointer;
+}
