--- a/src/app/modules/user/user/user.component.css
+++ b/src/app/modules/user/user/user.component.css
@@ -156,10 +156,9 @@ label:active:after {
 
 .empty-data-source {
     width: 526px;
-    height: 90px;
     font-size: 1.7em;
     text-align: center;
-    border: 2px solid #007bff;
+    border: 2px solid darkgray;
     margin: 0;
     position: absolute;
     top: 50%;
